GMRES included in AMG

--- a/AMG/TwoGrid_SchwingerModel.ipynb
+++ b/AMG/TwoGrid_SchwingerModel.ipynb
@@ -14,7 +14,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "pi = np.pi\n",
-    "\n",
     "from copy import deepcopy"
    ]
   },
@@ -75,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Nx, Nt = 16, 16\n",
+    "Nx, Nt = 20, 20\n",
     "block_x, block_t = 4, 4\n",
     "x_elements, t_elements = int(Nx/block_x), int(Nt/block_t)\n",
     "Ntest, Nagg = 10, 2*(block_x*block_t)\n",
@@ -264,7 +263,53 @@
     "phi = np.zeros(dim,dtype=complex)\n",
     "row, col, re, im = DatosMat(\"build/Phi0.dat\")\n",
     "for i in range(dim):\n",
-    "    phi[i] = re[i] + 1j*im[i] "
+    "    phi[i] = re[i] + 1j*im[i] \n",
+    "Dsparse = csc_array(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b678e29-35c5-4311-9093-4c3768a33426",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Memory occupied by the Dirac matrix\n",
+    "Ns = 20\n",
+    "DIM = 2*Ns**2\n",
+    "byts = 2*8*(DIM)**2\n",
+    "print(\"bytes = {0}\\n Mb = {1}\\n Gb = {2}\".format(byts,byts/1e6,byts/1e9))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "865915f3-aaf6-4f98-b367-5c10c00872ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "np.vdot(phi,phi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "512bbf10-fafa-4bde-bafe-89b602eefb43",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "x_gmres = phi #before x0\n",
+    "#GMRES\n",
+    "tol = 1e-10\n",
+    "print(\"---GMRES---\")\n",
+    "x_gmres, exit_code = gmres(Dsparse, phi, x0=phi, rtol=1e-10, atol=0.0, restart=80,maxiter=1)\n",
+    "r = phi - Dsparse.dot(x_gmres)\n",
+    "err = np.sqrt(np.real(np.vdot(r,r)))\n",
+    "print(\"Final error {0}\".format(err))"
    ]
   },
   {
@@ -295,25 +340,29 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7db5627b-b79a-4dba-b492-d3bdc1a989b1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "Dsparse = csc_array(D)\n",
-    "x_gmres = phi\n",
+    "x_gmres = phi #before x0\n",
     "#GMRES\n",
     "tol = 1e-10\n",
     "print(\"---GMRES---\")\n",
-    "for i in range(100):\n",
+    "for i in range(50):\n",
+    "    #restart is the number of iterations per restart cycle, while maxiter is the number of restarts\n",
+    "    #each iteration of this for loop is a full restart cycle\n",
     "    x_gmres, exit_code = gmres(Dsparse, phi, x0=x_gmres, rtol=1e-10, atol=0.0, restart=80,maxiter=1)\n",
     "    r = phi - Dsparse.dot(x_gmres)\n",
     "    err = np.sqrt(np.real(np.vdot(r,r)))\n",
-    "    print(i,err,exit_code)\n",
+    "    print(i+1,err,exit_code)\n",
     "    if err<=tol*np.linalg.norm(phi):\n",
     "        print(\"GMRES converged in {0} iterations\".format(i+1))\n",
     "        break\n",
     "#bi-cgstab\n",
     "print(\"---Bi-cgstab---\")\n",
-    "x_bi = x0\n",
+    "x_bi = phi #before x0\n",
     "x_bi, exit_code = bicgstab(Dsparse, phi,x0=x_bi,maxiter=500, rtol=1e-10)\n",
     "if exit_code == 0:\n",
     "    print(\"Converged\")\n",
@@ -536,7 +585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
