Pion correlator correction

--- a/mass_analysis.ipynb
+++ b/mass_analysis.ipynb
@@ -33,7 +33,7 @@
     "def EffectiveMass(Corr,Nt):\n",
     "    #We need the root of this function\n",
     "    def f(x,Corr,t):\n",
-    "        return Corr[t]/Corr[(t+1)%Nt] - np.cosh((x * (t-Nt/2)))/ np.cosh(x * ((t+1)%Nt-Nt/2))\n",
+    "        return Corr[t]/Corr[(t+1)%Nt] - np.cosh(x * (t-Nt/2))/ np.cosh(x * ( (t+1)%Nt - Nt/2 ))\n",
     "    meff = []\n",
     "    for t in range(Nt):\n",
     "        sol = optimize.root_scalar(f, args=(Corr,t), method='secant', x0=0.5, x1=1, xtol=1e-15, rtol=1e-15, maxiter=1000)\n",
@@ -43,8 +43,7 @@
     "            print(\"Solution not found for t={0}\".format(t))\n",
     "            meff.append(np.nan)\n",
     "    return np.array(meff)\n",
-    "        \n",
-    "        "
+    "          "
    ]
   },
   {
@@ -78,6 +77,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "39fa06bd-b92e-4eee-b568-53231f9ddffd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for t in range(Nt):\n",
+    "    print('C({0})= {1} +- {2}'.format(t,Corr[t],dCorr[t]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "110b6041-faa0-4bb6-8b9f-382b2aea3e3e",
    "metadata": {},
    "outputs": [],
@@ -95,13 +105,33 @@
     "        fmt='*',markersize='5',elinewidth=0.5,solid_capstyle='projecting',label='$m_0=${0}'.format(m0), capsize=1.5)\n",
     "#plt.yscale('log')\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "print(np.mean(meff[2:12]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd6d07cf-805c-4c10-a95f-31a8b1dae7f2",
+   "id": "78c8f7f8-83d0-4ce9-9470-882a03bf2309",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.optimize import curve_fit\n",
+    "def func(x, a, b):\n",
+    "    return a*np.exp((Nt/2-x)*b)\n",
+    "\n",
+    "popt, pcov = curve_fit(func, np.arange(Nt)[4:8], Corr[4:8],p0=[0.1,0.1])\n",
+    "print(popt)\n",
+    "plt.plot(np.arange(Nt), func(np.arange(Nt), *popt), 'r-',\n",
+    "         label='fit: a=%5.3f, b=%5.3f'% tuple(popt))\n",
+    "plt.scatter(np.arange(Nt),Corr)\n",
+    "plt.yscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f12c6d0-cf0d-4f29-8a59-d8830c03551b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -109,9 +139,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -123,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
