pion correlator debug

--- a/mass_analysis.ipynb
+++ b/mass_analysis.ipynb
@@ -134,14 +134,182 @@
    "id": "4f12c6d0-cf0d-4f29-8a59-d8830c03551b",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "kappa = 0.2680\n",
+    "mass = 1/(2*kappa)-2\n",
+    "print(mass)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "923b0485-b330-44d4-9ad4-98e37c75d57c",
+   "metadata": {},
+   "source": [
+    "### Using explicitly the Dirac Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a47398a-927d-411b-9b02-c69173728c18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.sparse import csc_array\n",
+    "from scipy.sparse.linalg import bicgstab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c39eb0a3-a1d6-4439-a25f-970a46ca48c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def DatosMat(path):\n",
+    "    data = [[],[],[],[]]\n",
+    "    with open(path) as fobj:\n",
+    "        for i, line in enumerate(fobj):\n",
+    "           # data.append([])\n",
+    "            if line.rsplit() != []:\n",
+    "                row = line.rsplit()   \n",
+    "                for j in range(len(row)):\n",
+    "                    data[j].append(float(row[j]))     \n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32a2b321-c53b-4d8d-8d3f-12aa9af2d5f1",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "Nx, Nt = 16, 16\n",
+    "num_configs = 1000\n",
+    "dim = Nx*Nt*2\n",
+    "print(dim)\n",
+    "D = np.zeros((dim,dim),dtype=complex)\n",
+    "Dinv = np.zeros((dim,2),dtype=complex)\n",
+    "CorrMat = np.zeros((Nt,num_configs))\n",
+    "Corr = np.zeros(Nt)\n",
+    "for nconf in range(num_configs):\n",
+    "    row, col, re, im = DatosMat(\"confs/D{0}.dat\".format(nconf))\n",
+    "    for i in range(dim*dim):\n",
+    "        D[ int(row[i]), int(col[i]) ] = re[i] + 1j*im[i] \n",
+    "    print(\"Conf {0}\".format(nconf))\n",
+    "    for i in range(2):\n",
+    "        can_vec = np.eye(1,dim,i).reshape(dim)\n",
+    "        Dinvcol, exit_code = bicgstab(csc_array(D), can_vec, x0=can_vec,maxiter=1000, rtol=1e-10)\n",
+    "        if exit_code != 0:\n",
+    "            print(\"convergence failed\")\n",
+    "        Dinv[:,i] = Dinvcol\n",
+    "    for t in range(Nt):\n",
+    "        for alf in range(2):\n",
+    "            for x in range(Nx):\n",
+    "                for bet in range(2):\n",
+    "                    indx = 2*(x*Nt + t)+alf \n",
+    "                    #the indx for bet is just bet\n",
+    "                    CorrMat[t,nconf] += np.real(Dinv[indx,bet] * np.conjugate(Dinv[indx,bet]))\n",
+    "        CorrMat[t,nconf] /= np.sqrt(Nx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c825569-f198-4a79-813f-695b4dbdf05c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for t in range(Nt):\n",
+    "    Corr[t] = np.mean(CorrMat[t])\n",
+    "    dCorr[t] = np.std(CorrMat[t])/np.sqrt(num_configs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23fd5bc8-9e88-48de-99c0-36d4eabe6b50",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "beta, Nx, Nt = 2, 16, 16\n",
+    "m0 = -0.16\n",
+    "\n",
+    "plt.title(r'Correlation function, $N_x$={0}, $N_t={1}$, $\\beta$={2}'.format(Nx,Nt,beta))\n",
+    "plt.ylabel(r'$|c(t)|$')\n",
+    "plt.xlabel(r\"$t$\")\n",
+    "\n",
+    "plt.errorbar(np.arange(Nt),Corr,yerr=dCorr,\\\n",
+    "    fmt='*',markersize='5',elinewidth=0.5,solid_capstyle='projecting',label='$m_0=${0} python'.format(m0), capsize=1.5)\n",
+    "\n",
+    "path = 'confs/b{0}_{1}x{2}/2D_U1_Ns{1}_Nt{2}_b{0}_m{3}_corr.txt'.format(beta,Nx,Nt,str(m0).replace(\".\",\"\"))\n",
+    "t, data, ddata = Datos(path)\n",
+    "data = abs(data)\n",
+    "plt.errorbar(t,data,yerr=ddata,\\\n",
+    "    fmt='*',markersize='5',elinewidth=0.5,solid_capstyle='projecting',label='$m_0=${0}'.format(m0), capsize=1.5)\n",
+    "plt.yscale('log')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "for i in np.arange(Nt):\n",
+    "    print(Corr[i],data[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2719983f-a781-46ac-89f0-106c4f3d69d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.title(r'Effective mass, $N_x$={0}, $N_t={1}$, $\\beta$={2}'.format(Nx,Nt,beta))\n",
+    "plt.ylabel(r'$m_{eff}(t)$')\n",
+    "plt.xlabel(r\"$t$\")\n",
+    "meff = EffectiveMass(Corr,Nt)\n",
+    "plt.errorbar(t,meff,yerr=meff*0,\\\n",
+    "    fmt='*',markersize='5',elinewidth=0.5,solid_capstyle='projecting',label='$m_0=${0}'.format(m0), capsize=1.5)\n",
+    "#plt.yscale('log')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "print(np.mean(meff[2:12]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "039e365a-3e10-49e0-911f-868f2b0681d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func(x, a, b):\n",
+    "    return a*np.exp((Nt/2-x)*b)\n",
+    "\n",
+    "popt, pcov = curve_fit(func, np.arange(Nt)[4:8], Corr[4:8],p0=[0.1,0.1])\n",
+    "print(popt)\n",
+    "plt.plot(np.arange(Nt), func(np.arange(Nt), *popt), 'r-',\n",
+    "         label='fit: a=%5.3f, b=%5.3f'% tuple(popt))\n",
+    "plt.scatter(np.arange(Nt),Corr)\n",
+    "plt.yscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59c3f7c4-5263-45a6-b2b5-be5c6580aea8",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -153,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
