SAP first commit

--- a/mass_analysis.ipynb
+++ b/mass_analysis.ipynb
@@ -33,7 +33,8 @@
     "def EffectiveMass(Corr,Nt):\n",
     "    #We need the root of this function\n",
     "    def f(x,Corr,t):\n",
-    "        return Corr[t]/Corr[(t+1)%Nt] - np.cosh(x * (t-Nt/2))/ np.cosh(x * ( (t+1)%Nt - Nt/2 ))\n",
+    "        #return Corr[t]/Corr[(t+1)%Nt] - np.cosh(x * (t-Nt/2))/ np.cosh(x * ( (t+1)%Nt - Nt/2 ))\n",
+    "        return Corr[t]/Corr[(t+1)%Nt] - np.cosh(x * (t-Nt/2))/ np.cosh(x * ( (t+1) - Nt/2 ))\n",
     "    meff = []\n",
     "    for t in range(Nt):\n",
     "        sol = optimize.root_scalar(f, args=(Corr,t), method='secant', x0=0.5, x1=1, xtol=1e-15, rtol=1e-15, maxiter=1000)\n",
@@ -188,13 +189,14 @@
    "outputs": [],
    "source": [
     "Nx, Nt = 16, 16\n",
-    "num_configs = 1000\n",
+    "num_configs = 1\n",
     "dim = Nx*Nt*2\n",
     "print(dim)\n",
     "D = np.zeros((dim,dim),dtype=complex)\n",
     "Dinv = np.zeros((dim,2),dtype=complex)\n",
     "CorrMat = np.zeros((Nt,num_configs))\n",
     "Corr = np.zeros(Nt)\n",
+    "dCorr = np.zeros(Nt)\n",
     "for nconf in range(num_configs):\n",
     "    row, col, re, im = DatosMat(\"confs/D{0}.dat\".format(nconf))\n",
     "    for i in range(dim*dim):\n",
@@ -214,6 +216,72 @@
     "                    #the indx for bet is just bet\n",
     "                    CorrMat[t,nconf] += np.real(Dinv[indx,bet] * np.conjugate(Dinv[indx,bet]))\n",
     "        CorrMat[t,nconf] /= np.sqrt(Nx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d37d91bd-a2e1-41bf-a552-4bd312089cc0",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "nconf = 0\n",
+    "row, col, re, im = DatosMat(\"confs/D{0}.dat\".format(nconf))\n",
+    "for i in range(dim*dim):\n",
+    "    D[ int(row[i]), int(col[i]) ] = re[i] + 1j*im[i] \n",
+    "Eigs = np.linalg.eig(D)[0]\n",
+    "x = [ele.real for ele in Eigs] \n",
+    "# extract imaginary part \n",
+    "y = [ele.imag for ele in Eigs]\n",
+    "norms = [np.abs(ele) for ele in Eigs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "529941a6-4e13-4d1a-8220-f3153fb59eb1",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "print(max(norms)/min(norms))\n",
+    "for i in range(len(x)):\n",
+    "    if np.abs(y[i]) < 1e-10:\n",
+    "        print(x[i],y[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1122c86a-8149-4d07-a37d-0b43ac08611d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(x,y)\n",
+    "plt.axvline(x=0, color='r', linestyle='-')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c9f5d9a-c54f-4ae2-b71a-057ef700d722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1-0.19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "803de3e4-b4a7-4e27-86da-0811d531da48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2-0.81"
    ]
   },
   {
