--- a/mass_analysis.ipynb
+++ b/mass_analysis.ipynb
@@ -79,7 +79,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "39fa06bd-b92e-4eee-b568-53231f9ddffd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "for t in range(Nt):\n",
@@ -90,7 +92,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "110b6041-faa0-4bb6-8b9f-382b2aea3e3e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "plt.title(r'Effective mass, $N_x$={0}, $N_t={1}$, $\\beta$={2}'.format(Nx,Nt,beta))\n",
@@ -107,7 +111,7 @@
     "#plt.yscale('log')\n",
     "plt.legend()\n",
     "plt.show()\n",
-    "print(np.mean(meff[2:12]))"
+    "print(np.mean(2*meff[2:12])/4)"
    ]
   },
   {
