--- a/mass_analysis.ipynb
+++ b/mass_analysis.ipynb
@@ -77,10 +77,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "390baf3f-c153-4e4f-88f3-df253c664b42",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "kappa2mass(0.251)"
+    "kappa2mass(0.247)"
    ]
   },
   {
@@ -90,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mass2kappa(-0.2)"
+    "mass2kappa(-0.039215686274509887)"
    ]
   },
   {
@@ -100,9 +102,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "beta, Nx, Nt = 2, 32, 32\n",
-    "masses = [-0.1,0,0.1]\n",
-    "#[-0.18840579710144945]#[-0.1,0,0.1]\n",
+    "beta, Nx, Nt = 4, 64, 64\n",
+    "masses = [kappa2mass(0.259),kappa2mass(0.255),kappa2mass(0.252),kappa2mass(0.251),kappa2mass(0.248)]\n",
+    "\n",
     "\n",
     "plt.title(r'Correlation function, $N_x$={0}, $N_t={1}$, $\\beta$={2}'.format(Nx,Nt,beta))\n",
     "plt.ylabel(r'$|c(t)|$')\n",
@@ -139,6 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig = plt.figure(dpi=150)\n",
     "plt.title(r'Effective mass, $N_x$={0}, $N_t={1}$, $\\beta$={2}'.format(Nx,Nt,beta))\n",
     "plt.ylabel(r'$m_{eff}(t)$')\n",
     "plt.xlabel(r\"$t$\")\n",
@@ -150,10 +153,13 @@
     "    meff = EffectiveMass(Corr,Nt)\n",
     "    plt.errorbar(t,meff,yerr=meff*0,\\\n",
     "        fmt='*',markersize='5',elinewidth=0.5,solid_capstyle='projecting',label='$m_0=${0}'.format(np.round(m0,3)), capsize=1.5)\n",
-    "    print(\"m0 = {0},  mpi = {1} +- {2}\".format(m0, np.mean(meff[7:25]),np.std(meff[7:25])))\n",
+    "    print(\"m0 = {0}, kappa = {1},  mpi = {2} +- {3}\".format(np.round(m0,3),mass2kappa(m0), \n",
+    "                                                                     np.round(np.mean(meff[11:30]),3),\n",
+    "                                                                    np.round(np.std(meff[11:30]),3)))\n",
     "#plt.yscale('log')\n",
     "plt.legend() \n",
-    "plt.show()"
+    "plt.show()\n",
+    "#fig.savefig(\"meff.pdf\")"
    ]
   },
   {
