--- a/mass_analysis.ipynb
+++ b/mass_analysis.ipynb
@@ -59,18 +59,20 @@
     "def func(x, a, b):\n",
     "    return a*np.exp((Nt/2-x)*b)\n",
     "\n",
+    "def kappa2mass(kappa):\n",
+    "    return 1/(2*kappa)-2\n",
+    "\n",
+    "def mass2kappa(m0):\n",
+    "    return 1/(2*(m0+2))\n",
+    "\n",
     "def format_number(number):\n",
     "    # Format the number with 2 decimal places\n",
     "    s = f\"{number:.2f}\"\n",
     "    # Remove the decimal point\n",
     "    s = s.replace('.', '')\n",
-    "    return s\n",
-    "\n",
-    "def kappa2mass(kappa):\n",
-    "    return 1/(2*kappa)-2\n",
-    "\n",
-    "def mass2kappa(m0):\n",
-    "    return 1/(2*(m0+2))"
+    "    if number == kappa2mass(0.247):\n",
+    "        s = '0024'\n",
+    "    return s"
    ]
   },
   {
@@ -88,22 +90,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5615d44e-3156-4b57-ace5-ba53568b9078",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mass2kappa(-0.039215686274509887)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "3b82900f-b124-44df-b201-aa7433533ac0",
    "metadata": {},
    "outputs": [],
    "source": [
     "beta, Nx, Nt = 4, 64, 64\n",
-    "masses = [kappa2mass(0.259),kappa2mass(0.255),kappa2mass(0.252),kappa2mass(0.251),kappa2mass(0.248)]\n",
+    "masses = [kappa2mass(0.259),kappa2mass(0.255),kappa2mass(0.252),kappa2mass(0.251),kappa2mass(0.248),kappa2mass(0.247)]\n",
     "\n",
     "\n",
     "plt.title(r'Correlation function, $N_x$={0}, $N_t={1}$, $\\beta$={2}'.format(Nx,Nt,beta))\n",
