Measure pion mass

--- a/mass_analysis.ipynb
+++ b/mass_analysis.ipynb
@@ -84,7 +84,17 @@
    },
    "outputs": [],
    "source": [
-    "kappa2mass(0.247)"
+    "kappa2mass(0.248)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b65cd25d-262a-45bc-9a8e-54687728f1b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "format_number(kappa2mass(0.248))"
    ]
   },
   {
@@ -95,15 +105,16 @@
    "outputs": [],
    "source": [
     "beta, Nx, Nt = 4, 64, 64\n",
-    "masses = [kappa2mass(0.259),kappa2mass(0.255),kappa2mass(0.252),kappa2mass(0.251),kappa2mass(0.248),kappa2mass(0.247)]\n",
-    "\n",
+    "#masses = [kappa2mass(0.259),kappa2mass(0.255),kappa2mass(0.252),kappa2mass(0.251),kappa2mass(0.248),kappa2mass(0.247)]\n",
+    "masses = [kappa2mass(0.248)]\n",
     "\n",
     "plt.title(r'Correlation function, $N_x$={0}, $N_t={1}$, $\\beta$={2}'.format(Nx,Nt,beta))\n",
     "plt.ylabel(r'$|c(t)|$')\n",
     "plt.xlabel(r\"$t$\")\n",
     "\n",
     "for m0 in masses:\n",
-    "    path = 'confs/b{0}_{1}x{2}/2D_U1_Ns{1}_Nt{2}_b{0}_m{3}_corr.txt'.format(beta,Nx,Nt,format_number(m0))\n",
+    "    #path = 'confs/b{0}_{1}x{2}/2D_U1_Ns{1}_Nt{2}_b{0}_m{3}_corr.txt'.format(beta,Nx,Nt,format_number(m0))\n",
+    "    path = 'build/b{0}_{1}x{2}/2D_U1_Ns{1}_Nt{2}_b{0}_m{3}_corr.txt'.format(beta,Nx,Nt,format_number(m0))\n",
     "    t, Corr, dCorr = Datos(path)\n",
     "    Corr = abs(Corr)\n",
     "    plt.errorbar(t,Corr,yerr=dCorr,\\\n",
@@ -139,7 +150,8 @@
     "plt.xlabel(r\"$t$\")\n",
     "\n",
     "for m0 in masses:\n",
-    "    path = 'confs/b{0}_{1}x{2}/2D_U1_Ns{1}_Nt{2}_b{0}_m{3}_corr.txt'.format(beta,Nx,Nt,format_number(m0))\n",
+    "    #path = 'confs/b{0}_{1}x{2}/2D_U1_Ns{1}_Nt{2}_b{0}_m{3}_corr.txt'.format(beta,Nx,Nt,format_number(m0))\n",
+    "    path = 'build/b{0}_{1}x{2}/2D_U1_Ns{1}_Nt{2}_b{0}_m{3}_corr.txt'.format(beta,Nx,Nt,format_number(m0))\n",
     "    t, Corr, dCorr = Datos(path)\n",
     "    Corr = abs(Corr)\n",
     "    meff = EffectiveMass(Corr,Nt)\n",
