tests for beta=4

--- a/mass_analysis.ipynb
+++ b/mass_analysis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1e3ab136-044a-45e2-afdd-cf2668375c51",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a7d40230-b50a-477e-b42e-5b678f2d8ac4",
    "metadata": {},
    "outputs": [],
@@ -77,14 +77,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "390baf3f-c153-4e4f-88f3-df253c664b42",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mass difference 0.0010000000000000009\n",
+      "kappa difference 0.0001389132917096747\n"
+     ]
+    }
+   ],
    "source": [
-    "kappa2mass(0.248)"
+    "mc, m0 = -0.1033,  -0.1023\n",
+    "print(\"mass difference\",np.abs(mc-m0))\n",
+    "print(\"kappa difference\",np.abs(mass2kappa(mc)-mass2kappa(m0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ffae91cf-bb71-4098-a148-b850fa8f2330",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mass difference 0.008394000000000013\n",
+      "kappa difference 0.0012847960622645038\n"
+     ]
+    }
+   ],
+   "source": [
+    "mc, m0 = -0.1968,  -0.188406\n",
+    "print(\"mass difference\",np.abs(mc-m0))\n",
+    "print(\"kappa difference\",np.abs(mass2kappa(mc)-mass2kappa(m0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "aa5fb98a-ecfb-4d1a-9b82-e27f8d293c56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.277284826974268"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mass2kappa(-0.1968)"
    ]
   },
   {
