tuning acceptance rate experiments

--- a/mass_analysis.ipynb
+++ b/mass_analysis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1e3ab136-044a-45e2-afdd-cf2668375c51",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a7d40230-b50a-477e-b42e-5b678f2d8ac4",
    "metadata": {},
    "outputs": [],
@@ -73,6 +73,27 @@
     "    if number == kappa2mass(0.247):\n",
     "        s = '0024'\n",
     "    return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "755988a6-9e76-4254-bf07-7730cf1b6e1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.17364082025196828\n"
+     ]
+    }
+   ],
+   "source": [
+    "nmeas = 1100\n",
+    "l = 10\n",
+    "epsilon = nmeas**(-0.25)\n",
+    "print(epsilon)"
    ]
   },
   {
