--- a/mass_analysis.ipynb
+++ b/mass_analysis.ipynb
@@ -84,7 +84,17 @@
    },
    "outputs": [],
    "source": [
-    "kappa2mass(0.248)"
+    "kappa2mass(0.251)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e58cf009-46a7-466a-935a-db97b010c06d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mass2kappa(-0.0079681300000000004)"
    ]
   },
   {
@@ -113,7 +123,7 @@
     "plt.xlabel(r\"$t$\")\n",
     "\n",
     "for m0 in masses:\n",
-    "    path = 'confs/b{0}_{1}x{2}/m-007/NewConfs/2D_U1_Ns{1}_Nt{2}_b{0}_m{3}_corr.txt'.format(beta,Nx,Nt,format_number(m0))\n",
+    "    path = 'confs/b{0}_{1}x{2}/m-007/Test/2D_U1_Ns{1}_Nt{2}_b{0}_m{3}_corr.txt'.format(beta,Nx,Nt,format_number(m0))\n",
     "    #path = 'build/b{0}_{1}x{2}/2D_U1_Ns{1}_Nt{2}_b{0}_m{3}_corr.txt'.format(beta,Nx,Nt,format_number(m0))\n",
     "    t, Corr, dCorr = Datos(path)\n",
     "    Corr = abs(Corr)\n",
@@ -145,7 +155,7 @@
    "outputs": [],
    "source": [
     "print(\"Sequential version mpi in [{0} , {1}]\".format(0.326-0.005,0.326+0.005))\n",
-    "print(\"Parallel version mpi in [{0} , {1}]\".format(0.332-0.007,0.332+0.007))"
+    "print(\"Parallel version mpi in [{0} , {1}]\".format(0.325-0.01,0.325+0.01))"
    ]
   },
   {
@@ -161,7 +171,7 @@
     "plt.xlabel(r\"$t$\")\n",
     "\n",
     "for m0 in masses:\n",
-    "    path = 'confs/b{0}_{1}x{2}/m-007/NewConfs/2D_U1_Ns{1}_Nt{2}_b{0}_m{3}_corr.txt'.format(beta,Nx,Nt,format_number(m0))\n",
+    "    path = 'confs/b{0}_{1}x{2}/m-007/Test/2D_U1_Ns{1}_Nt{2}_b{0}_m{3}_corr.txt'.format(beta,Nx,Nt,format_number(m0))\n",
     "    #path = 'confs/b{0}_{1}x{2}/2D_U1_Ns{1}_Nt{2}_b{0}_m{3}_corr.txt'.format(beta,Nx,Nt,format_number(m0))\n",
     "    t, Corr, dCorr = Datos(path)\n",
     "    Corr = abs(Corr)\n",
